change body background color in dark mode to dark gray and fix double top padding in `li > p`

--- a/static/common-dark.css
+++ b/static/common-dark.css
@@ -1,9 +1,6 @@
-* {
+body {
+    background-color: #111;
     color: white;
-}
-
-#article {
-    background: #111;
 }
 
 h1, h2, h3, h4, h5, h6 {
