--- a/static/common-light.css
+++ b/static/common-light.css
@@ -1,4 +1,5 @@
-* {
+body {
+    background-color: var(--primary-color);
     color: black;
 }
 
